# sdk

./: .gitattributes  .gitignore  .prettierrc  CHANGELOG.md  Cargo.toml  FILE_TEMPLATE  README.md  build.rs  data.checkfile
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml
data/pay/testnet/: assets.json
data/pay/testnet/asset/: map.json  map.schema.json
data/pay/testnet/proving/: mint.lfs  reclaim.lfs
data/testnet/verifying/: mint
data/trusted-setup/bls12-381/: powers-of-tau-g1.lfs  powers-of-tau-g2.lfs
dolphin-types/interfaces/: augment-api-consts.ts  augment-api-errors.ts  augment-api-events.ts  augment-api-query.ts  augment-api-tx.ts  lookup.ts  registry.ts  types-lookup.ts
dolphin-types/interfaces/treasuryRewards/: types.ts
dolphin-types/interfaces/voting/: types.ts
manta-js/: CHANGELOG.md  README.md  tsconfig.json
manta-js/doc/: README.md
manta-js/docs/: hot-to-use-manta-js-sdk.md  how-to-mint-zk-sbt.md  how-to-use-manta-js-sdk.md  how-to-use-manta-private-wallet-in-dapp.md
manta-js/examples/asset-webpack-ts/: .gitignore  README.md  index.ts  package.json  webpack.config.js
manta-js/examples/balance-issue-example/: README.md  index.html  package.json  vite.config.ts
manta-js/examples/balance-issue-example/src/: App.tsx  index.css  utils.ts
manta-js/examples/extension-example/: README.md  index.html  package-lock.json  package.json
manta-js/examples/extension-example/src/: App.tsx  index.css  interfaces.ts
manta-js/examples/sbt-example/: README.md  index.ts  package.json
manta-js/examples/sdk-example/: README.md  index.html  index.ts  package.json  utils.ts  webpack.config.js
manta-js/examples/sdk-node-example/: .gitignore  .prettierrc  README.md  package.json
manta-js/examples/sdk-node-example/db/mantaPay_Calamari_5F4WeghLFsBgiuAwdPgWCHTNkp7ctcgJaMqH2PxqiBDW6Uzq/: 000090.ldb  LOG  LOG.old  MANIFEST-000087
manta-js/examples/sdk-node-example/src/: index.js  utils.js
manta-js/package/: .eslintignore  .eslintrc  .gitignore  .npmignore  README_SBT.MD  manta-config.json  package.json  sdk.interfaces.ts  sdk.ts  tsconfig.json  utils.ts
manta-js/package/api/: index.js
manta-js/package/src/: BaseWallet.ts  PrivateWallet.ts  baseWallet.ts  config.json  constants.ts  index.ts  interfaces.ts  manta-config.json  manta-config.ts  privateWallet.ts  sbtPrivateWallet.ts  sdk.d.ts  sdk.interfaces.ts  sdk.ts  utils.ts
manta-js/package/src/api/: README.md  index.js  index.ts
manta-js/package/src/ledger-api/: README.md  decodeUtils.ts  index.ts
manta-js/package/src/pallets/: MantaPayWallet.ts  MantaSbtWallet.ts  index.ts
manta-js/package/src/utils/: TaskSchedule.ts  index.ts
manta-js/package/src/wallet/: README.md  index.js  package.json  webpack.config.js
manta-js/package/src/wallet/crate/: .gitignore  Cargo.toml
manta-js/package/src/wallet/crate/src/: lib.rs  types.rs
manta.js/package/: .gitignore
sdk/: README.md
sdk/examples/asset-ts/: index.ts  package.json  tsconfig.json
sdk/examples/asset-webpack/: index.js  package.json  webpack.config.js
sdk/examples/asset-webpack-ts/: index.js  index.ts  package.json  tsconfig.json
sdk/package/: README.md  manta-config.json  package.json  sdk.interfaces.ts  sdk.js  sdk.ts
src/: lib.rs
typescript-api/: README.md  package.json  tsconfig.json
typescript-api/dolphin/: index.ts
typescript-api/dolphin/interfaces/: augment-types.ts  types.ts
typescript-api/dolphin/interfaces/signaling/: types.ts
typescript-api/scripts/: postbuild.js
typescript-api/src/dolphin/: index.ts  tsconfig.json
typescript-api/src/dolphin/interfaces/: augment-api-consts.ts  augment-api-errors.ts  augment-api-events.ts  augment-api-query.ts  augment-api-rpc.ts  augment-api-tx.ts  augment-types.ts  lookup.ts  registry.ts  types-lookup.ts
wallet/: README.md  package-lock.json  package.json
wallet-api/: index.js
wallet/api/: index.js  package.json
wallet/crate/: .gitignore  Cargo.toml
wallet/crate/src/: http.rs  lib.rs  transaction.rs  types.rs
