[package]
name = "manta-sdk"
edition = "2021"
version = "0.4.0"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/sdk"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/sdk"
categories = [""]
keywords = [""]
description = "Manta Network SDK"
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/sdk" }
is-it-maintained-open-issues = { repository = "Manta-Network/sdk" }
maintenance = { status = "actively-developed" }

[dependencies]
blake3 = { version = "1.3.0", default-features = false }
phf = { version = "0.10.1", default-features = false }
serde = { version = "1.0.133", default-features = false, features = ["derive"] }

[build-dependencies]
anyhow = { version = "1.0.52", default-features = false, features = ["std"] }
convert_case = { version = "0.5.0", default-features = false }
indoc = { version = "1.0.3", default-features = false }
jsonschema = { version = "0.13.3", default-features = false }
phf_codegen = { version = "0.10.0", default-features = false }
serde = { version = "1.0.133", default-features = false }
serde_json = { version = "1.0.75", default-features = false, features = ["preserve_order"] }
walkdir = { version = "2.3.2", default-features = false }
