[package]
name = "manta-sdk"
edition = "2021"
version = "0.4.0"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/sdk"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/sdk"
categories = [""]
keywords = [""]
description = "Manta Network SDK"
include = ["LICENSE", "README.md", "build.rs", "data.checkfile", "data/*", "src/lib.rs"]
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/sdk" }
is-it-maintained-open-issues = { repository = "Manta-Network/sdk" }
maintenance = { status = "actively-developed" }

[features]
# Enable Allocation
alloc = []

# Enable Standard Library
std = ["alloc"]

# Download Data from GitHub
download = ["anyhow/std", "attohttpc", "std"]

[dependencies]
anyhow = { version = "1.0.53", default-features = false, optional = true }
attohttpc = { version = "0.18.0", optional = true }
blake3 = { version = "1.3.0", default-features = false }
phf = { version = "0.10.1", default-features = false }
serde = { version = "1.0.135", default-features = false, features = ["derive"] }

[dev-dependencies]
tempfile = { version = "3.3.0" }
walkdir = { version = "2.3.2" }

[build-dependencies]
anyhow = { version = "1.0.52", default-features = false, features = ["std"] }
convert_case = { version = "0.5.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
indoc = { version = "1.0.3", default-features = false }
jsonschema = { version = "0.13.3", default-features = false }
phf_codegen = { version = "0.10.0", default-features = false }
serde_json = { version = "1.0.78", default-features = false, features = ["preserve_order"] }
walkdir = { version = "2.3.2", default-features = false }
