[package]
name = "manta-wasm-wallet"
edition = "2021"
version = "1.0.0"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/sdk"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/sdk"
categories = [""]
keywords = [""]
description = "Manta Wallet API WebAssembly and JS Bindings"
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/sdk" }
is-it-maintained-open-issues = { repository = "Manta-Network/sdk" }
maintenance = { status = "actively-developed" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", default-features = false }
js-sys = { version = "0.3.56", default-features = false }
manta-accounting = { git = "https://github.com/manta-network/manta-rs.git", default-features = false, features = ["serde"] }
manta-crypto = { git = "https://github.com/manta-network/manta-rs.git", default-features = false, features = ["serde"] }
manta-pay = { git = "https://github.com/manta-network/manta-rs.git", default-features = false, features = ["groth16", "http", "scale", "serde"] }
manta-util = { git = "https://github.com/manta-network/manta-rs.git", default-features = false, features = ["serde"] }
scale-codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive", "max-encoded-len"] }
serde_json = { version = "1.0.79", default-features = false, features = ["alloc", "arbitrary_precision"] }
wasm-bindgen = { version = "0.2.79", default-features = false, features = ["serde-serialize", "std"] }
wasm-bindgen-futures = { version = "0.4.29", default-features = false }
